# BToolkit

./: CMakeLists.txt
BEESRC/: CMakeLists.txt
BEESRC/BTL_PRF/CDE/C/: CMakeLists.txt
C/: CMakeLists.txt  ClientSocket.c
LEX/: CMakeLists.txt
LIB/: CMakeLists.txt
MOTIF/: CMakeLists.txt
MOTIF/CFG_DEP_BASE/CDE/C/: CMakeLists.txt
SCRIPTS/: CMakeLists.txt
SRC/: CMakeLists.txt
UTIL/: set_basic_variables  set_compile_variables
cmake/: copy-if-exists.cmake
