set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/BLIB)

add_executable(BProcessInfo
  BProcessInfo.c
)

add_executable(BToolkit
  BToolkit.c
)

add_executable(BUnlock
  BUnlock.c
)

add_executable(BSession
  BSession.c
)

add_executable(CheckRenameLib
  CheckRenameLib.c
)

add_executable(CreHtml
  CreHtml.c
)

add_executable(CreHtmlc
  CreHtmlc.c
)

add_executable(Greplace
  Greplace.c
)

add_executable(LatexProofFilter
  LatexProofFilter.c
)

add_executable(CheckAnnot
  Proof.c
)
